[gd_scene load_steps=28 format=4 uid="uid://drvctd7cb5hjn"]

[ext_resource type="Script" uid="uid://d4h0s7grexm61" path="res://objekts/machines/kreator/kreator.gd" id="1_y003u"]
[ext_resource type="FontFile" uid="uid://bv4vvvkt08xva" path="res://UI/IBMPlexMono-Light.ttf" id="2_dea7w"]
[ext_resource type="ArrayMesh" uid="uid://b844s7fag2kmt" path="res://objekts/machines/kreator/mesh.tres" id="2_y003u"]
[ext_resource type="Material" uid="uid://pcxososdf80d" path="res://objekts/unpausedlight.tres" id="4_fv1li"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_dea7w"]
data = PackedVector3Array(-0.7106, 0.6766, 0.7105, 0.8152, 0.1883, 0.8152, 0.7105, 0.6766, 0.7105, -0.7106, 0.6766, 0.7105, -0.8152, 0.1883, 0.8152, 0.8152, 0.1883, 0.8152, 1, -0.2077, 1, -1, 0.6766, 1, 1, 0.6766, 1, 1, -0.2077, 1, -1, -0.2077, 1, -1, 0.6766, 1, -1, -0.2077, 1, -1, 0.6766, -1, -1, 0.6766, 1, -1, -0.2077, 1, -1, -0.2077, -1, -1, 0.6766, -1, -1, -0.2077, -1, 1, -0.2077, 1, 1, -0.2077, -1, -1, -0.2077, -1, -1, -0.2077, 1, 1, -0.2077, 1, 1, -0.2077, -1, 1, 0.6766, 1, 1, 0.6766, -1, 1, -0.2077, -1, 1, -0.2077, 1, 1, 0.6766, 1, -1, -0.2077, -1, 1, 0.6766, -1, -1, 0.6766, -1, -1, -0.2077, -1, 1, -0.2077, -1, 1, 0.6766, -1, 0.7105, 0.6766, 0.7105, -1, 0.6766, 1, -0.7106, 0.6766, 0.7105, 0.7105, 0.6766, 0.7105, 1, 0.6766, 1, -1, 0.6766, 1, 0.7105, 0.6766, -0.7106, 1, 0.6766, 1, 0.7105, 0.6766, 0.7105, 0.7105, 0.6766, -0.7106, 1, 0.6766, -1, 1, 0.6766, 1, -0.7106, 0.6766, 0.7105, -1, 0.6766, -1, -0.7106, 0.6766, -0.7106, -0.7106, 0.6766, 0.7105, -1, 0.6766, 1, -1, 0.6766, -1, -0.7106, 0.6766, -0.7106, 1, 0.6766, -1, 0.7105, 0.6766, -0.7106, -0.7106, 0.6766, -0.7106, -1, 0.6766, -1, 1, 0.6766, -1, 0.6214, 0.1883, -0.6215, -0.6215, 0.1883, 0.6214, -0.6215, 0.1883, -0.6215, 0.6214, 0.1883, -0.6215, 0.6214, 0.1883, 0.6214, -0.6215, 0.1883, 0.6214, 0.7105, 0.6766, -0.7106, -0.8152, 0.1883, -0.8152, -0.7106, 0.6766, -0.7106, 0.7105, 0.6766, -0.7106, 0.8152, 0.1883, -0.8152, -0.8152, 0.1883, -0.8152, 0.7105, 0.6766, 0.7105, 0.8152, 0.1883, -0.8152, 0.7105, 0.6766, -0.7106, 0.7105, 0.6766, 0.7105, 0.8152, 0.1883, 0.8152, 0.8152, 0.1883, -0.8152, -0.7106, 0.6766, -0.7106, -0.8152, 0.1883, 0.8152, -0.7106, 0.6766, 0.7105, -0.7106, 0.6766, -0.7106, -0.8152, 0.1883, -0.8152, -0.8152, 0.1883, 0.8152, -0.8152, 0.1883, 0.8152, 0.8152, 0.7687, 0.8152, 0.8152, 0.1883, 0.8152, -0.8152, 0.1883, 0.8152, -0.8152, 0.7687, 0.8152, 0.8152, 0.7687, 0.8152, -0.6215, 0.1883, -0.6215, 0.6214, 0.7687, -0.6215, 0.6214, 0.1883, -0.6215, -0.6215, 0.1883, -0.6215, -0.6215, 0.7687, -0.6215, 0.6214, 0.7687, -0.6215, -0.8152, 0.1883, -0.8152, -0.8152, 0.7687, 0.8152, -0.8152, 0.1883, 0.8152, -0.8152, 0.1883, -0.8152, -0.8152, 0.7687, -0.8152, -0.8152, 0.7687, 0.8152, 0.6214, 0.1883, 0.6214, -0.6215, 0.7687, 0.6214, -0.6215, 0.1883, 0.6214, 0.6214, 0.1883, 0.6214, 0.6214, 0.7687, 0.6214, -0.6215, 0.7687, 0.6214, 0.6214, 0.7687, 0.6214, -0.8152, 0.7687, 0.8152, -0.6215, 0.7687, 0.6214, 0.6214, 0.7687, 0.6214, 0.8152, 0.7687, 0.8152, -0.8152, 0.7687, 0.8152, 0.6214, 0.7687, -0.6215, 0.8152, 0.7687, 0.8152, 0.6214, 0.7687, 0.6214, 0.6214, 0.7687, -0.6215, 0.8152, 0.7687, -0.8152, 0.8152, 0.7687, 0.8152, -0.6215, 0.7687, 0.6214, -0.8152, 0.7687, -0.8152, -0.6215, 0.7687, -0.6215, -0.6215, 0.7687, 0.6214, -0.8152, 0.7687, 0.8152, -0.8152, 0.7687, -0.8152, -0.6215, 0.7687, -0.6215, 0.8152, 0.7687, -0.8152, 0.6214, 0.7687, -0.6215, -0.6215, 0.7687, -0.6215, -0.8152, 0.7687, -0.8152, 0.8152, 0.7687, -0.8152, 0.6214, 0.1883, -0.6215, 0.6214, 0.7687, 0.6214, 0.6214, 0.1883, 0.6214, 0.6214, 0.1883, -0.6215, 0.6214, 0.7687, -0.6215, 0.6214, 0.7687, 0.6214, 0.8152, 0.1883, -0.8152, -0.8152, 0.7687, -0.8152, -0.8152, 0.1883, -0.8152, 0.8152, 0.1883, -0.8152, 0.8152, 0.7687, -0.8152, -0.8152, 0.7687, -0.8152, 0.8152, 0.1883, 0.8152, 0.8152, 0.7687, -0.8152, 0.8152, 0.1883, -0.8152, 0.8152, 0.1883, 0.8152, 0.8152, 0.7687, 0.8152, 0.8152, 0.7687, -0.8152, -0.6215, 0.1883, 0.6214, -0.6215, 0.7687, -0.6215, -0.6215, 0.1883, -0.6215, -0.6215, 0.1883, 0.6214, -0.6215, 0.7687, 0.6214, -0.6215, 0.7687, -0.6215)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5afqf"]
albedo_color = Color(0.205111, 0.205111, 0.205111, 1)

[sub_resource type="BoxMesh" id="BoxMesh_4jp8o"]
size = Vector3(0.8, 0.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_qx5p1"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="Animation" id="Animation_6vnfi"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_jq3s3"]
resource_name = "spawn"
length = 1.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 1.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ut07"]
_data = {
&"RESET": SubResource("Animation_6vnfi"),
&"spawn": SubResource("Animation_jq3s3")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_xancn"]
size = Vector3(0.5, 1.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j8dy4"]
bg_color = Color(0, 0, 0, 0.352941)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q082k"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qol8"]
bg_color = Color(0, 0, 0, 0.352941)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vf10q"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.8, 0.8, 0.8, 1)
metallic = 1.0
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qbhn3"]
resource_name = "Material.007"
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_yvbta"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 30,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEABwABAAMABwAFAAEA"),
"name": "Material.006",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP////8AAAAAAAAAAAAAAAD//wAAAAD//wAA//8AAP///////wAA//8AAAAAAAD/////AAAAAA==")
}, {
"aabb": AABB(-1, -1, -1, 2, 1e-05, 2),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray("AQACAAMAAQAAAAIA"),
"name": "Material.007",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAAAAP//AAAAAAAAAAAAAP//AAD//wAA//8AAAAAAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_a14ut"]
resource_name = "Kreator2_Cube_002"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/18AAP9f////nwAA/9//P/+f////X/+//1//v/+f/7//3/9//5//v/9f/z//X/8//5//P/+f/z//n/8//1//f/9f/3//n/9//5//f/+f/38="),
"format": 34896613399,
"index_count": 30,
"index_data": PackedByteArray("AQAJAAQAAQAGAAkABQARAAcABQAPABEAEAAOABMAEAALAA4ACgACAAwACgAAAAIAEgADAAgAEgANAAMA"),
"material": SubResource("StandardMaterial3D_vf10q"),
"name": "Material.006",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("AAAAAP///78AAAAA//9U1QAA//////+/AAD///////8AAP////9U1QAAAAAAAP//AAAAAAAAVNUAAP//AAD//wAA//8AAP//AAD//wAAVNX//wAA////v///AAD//1TV/////////7///////////////////1TV//8AAAAA/////wAAAABU1f////8AAP///////wAA////////AABU1f////9U1VTV//////9//79U1VTV/7//v1TVVNX/v/+//3//v1TVVNX/////qiqqKv//////f/+/qiqqKv+//7+qKqoq/7//v/9//7+qKqoq")
}, {
"aabb": AABB(-1, -1, -1, 2, 1e-05, 2),
"attribute_data": PackedByteArray("/x//P/8f/3//X/8//1//fw=="),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray("AQACAAMAAQAAAAIA"),
"material": SubResource("StandardMaterial3D_qbhn3"),
"name": "Material.007",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAP9/AAD/fwAA/38AAP9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_yvbta")

[sub_resource type="ArrayMesh" id="ArrayMesh_tmh46"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEA"),
"name": "Material.009",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP////8AAAAAAAAAAAAAAAD//wAAAAD//wAA//8AAP///////wAA//8AAAAAAAD/////AAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_0affv"]
resource_name = "Kreator2_Cube_006"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/18AAP8f/z//X////58AAP/f/z//n////1//v/8f/3//X/+//5//v//f/3//n/+//1//P/9f/z//X/8//5//P/+f/z//n/8//1//f/9f/3//X/9//5//f/+f/3//n/9/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AgALAAUAAgAIAAsABgAVAAkABgASABUAFAARABcAFAAOABEADAADAA8ADAAAAAMABwANABMABwABAA0AFgAEAAoAFgAQAAQA"),
"material": SubResource("StandardMaterial3D_vf10q"),
"name": "Material.009",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP///78AAAAA////vwAAAAD//1TVAAD//////78AAP///////wAA/////1TVAAAAAAAA//8AAAAAAAD/vwAAAAAAAFTVAAD//wAA//8AAP//AAD//wAA//8AAFTV//8AAP///7///wAA////v///AAD//1TV/////////7///////////////////1TV//8AAAAA/////wAAAAD/v///AAAAAFTV/////wAA////////AAD///////8AAFTV/////wAA/39U1VTV//////9//79U1VTV/7//vwAA/39U1VTV/7//v/9//79U1VTV/////wAA/3+qKqoq//////9//7+qKqoq/7//vwAA/3+qKqoq/7//v/9//7+qKqoq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_tmh46")

[sub_resource type="ArrayMesh" id="ArrayMesh_hqr0n"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEA"),
"name": "Material.003",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP////8AAAAAAAAAAAAAAAD//wAAAAD//wAA//8AAP///////wAA//8AAAAAAAD/////AAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_euejm"]
resource_name = "Kreator2_Cube_004"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/18AAP8f/z//X////58AAP/f/z//n////1//v/8f/3//X/+//5//v//f/3//n/+//1//P/9f/z//X/8//5//P/+f/z//n/8//1//f/9f/3//X/9//5//f/+f/3//n/9/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AgALAAUAAgAIAAsABgAVAAkABgASABUAFAARABcAFAAOABEADAADAA8ADAAAAAMABwANABMABwABAA0AFgAEAAoAFgAQAAQA"),
"material": SubResource("StandardMaterial3D_vf10q"),
"name": "Material.003",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP///78AAAAA////vwAAAAD//1TVAAD//////78AAP///////wAA/////1TVAAAAAAAA//8AAAAAAAD/vwAAAAAAAFTVAAD//wAA//8AAP//AAD//wAA//8AAFTV//8AAP///7///wAA////v///AAD//1TV/////////7///////////////////1TV//8AAAAA/////wAAAAD/v///AAAAAFTV/////wAA////////AAD///////8AAFTV/////wAA/39U1VTV//////9//79U1VTV/7//vwAA/39U1VTV/7//v/9//79U1VTV/////wAA/3+qKqoq//////9//7+qKqoq/7//vwAA/3+qKqoq/7//v/9//7+qKqoq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_hqr0n")

[sub_resource type="Animation" id="Animation_d5057"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hingeL:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.0944, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hingeR:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.0944, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ecvyk"]
resource_name = "open"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hingeL:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(2.0944, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hingeR:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-2.0944, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_itp44"]
_data = {
&"RESET": SubResource("Animation_d5057"),
&"open": SubResource("Animation_ecvyk")
}

[sub_resource type="BoxMesh" id="BoxMesh_a6vkb"]
size = Vector3(0.05, 0.1, 0.15)

[node name="kreator" type="CollisionShape3D" groups=["kreator", "machine", "save"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.258902, 0)
shape = SubResource("ConcavePolygonShape3D_dea7w")
script = ExtResource("1_y003u")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 1.998, 0, -0.530361, 0)
material_override = SubResource("StandardMaterial3D_5afqf")
mesh = SubResource("BoxMesh_4jp8o")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="." groups=["liftbox"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.514361, 0)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.165289, 0)
shape = SubResource("BoxShape3D_qx5p1")

[node name="spawnbox" type="Area3D" parent="." groups=["inkreator", "usingbox"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.1, 0)
input_ray_pickable = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="spawnbox"]
libraries = {
&"": SubResource("AnimationLibrary_8ut07")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawnbox"]
shape = SubResource("BoxShape3D_xancn")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_top = 35.0
offset_right = 128.0
offset_bottom = 43.0
theme_override_styles/background = SubResource("StyleBoxFlat_j8dy4")
theme_override_styles/fill = SubResource("StyleBoxFlat_q082k")
max_value = 5.0
value = 1.0
show_percentage = false

[node name="Timer" type="Timer" parent="ProgressBar"]
wait_time = 5.0
one_shot = true

[node name="automated" type="Timer" parent="ProgressBar"]
wait_time = 4.5
one_shot = true

[node name="buttonholder" type="Marker3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 3.48564, 0)

[node name="createbox" type="Button" parent="buttonholder"]
visible = false
offset_right = 128.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_dea7w")
theme_override_styles/normal = SubResource("StyleBoxFlat_4qol8")
text = "create a box"

[node name="pause" type="Button" parent="buttonholder"]
visible = false
offset_right = 72.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_dea7w")
text = "pause"

[node name="Cube_003" type="MeshInstance3D" parent="."]
transform = Transform3D(0.195914, 0.0349152, 4.60486e-08, 0.279794, -0.024448, 0, -1.71273e-08, -3.05238e-09, 0.526734, -1.018, 0.685639, -0.356)
mesh = SubResource("ArrayMesh_a14ut")
skeleton = NodePath("")

[node name="Cube" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00215322, -8.86918e-05)
mesh = ExtResource("2_y003u")
skeleton = NodePath("")

[node name="door" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.514361, 0)

[node name="hingeL" type="Node3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, -0.500004, -0.866023, 0, 0.866023, -0.500004, 0, 0.63, 0.35)

[node name="door" type="MeshInstance3D" parent="door/hingeL"]
transform = Transform3D(-7.31707e-09, 0, -0.368836, 0, 0.0117896, 0, 0.167395, 0, -1.61223e-08, 0, 0, -0.185)
mesh = SubResource("ArrayMesh_0affv")
skeleton = NodePath("")

[node name="hingeR" type="Node3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, -0.500004, 0.866023, 0, -0.866023, -0.500004, 0, 0.63, -0.35)

[node name="door" type="MeshInstance3D" parent="door/hingeR"]
transform = Transform3D(-7.31707e-09, 0, -0.368836, 0, 0.0117896, 0, 0.167395, 0, -1.61223e-08, 0, 0, 0.185)
mesh = SubResource("ArrayMesh_euejm")
skeleton = NodePath("")

[node name="AnimationPlayer" type="AnimationPlayer" parent="door"]
libraries = {
&"": SubResource("AnimationLibrary_itp44")
}

[node name="pause" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.90996, 0.664901, 0.662208)
material_override = ExtResource("4_fv1li")
mesh = SubResource("BoxMesh_a6vkb")
skeleton = NodePath("")

[node name="sender" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[connection signal="animation_finished" from="spawnbox/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ProgressBar/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ProgressBar/automated" to="." method="_on_automated_timeout"]
[connection signal="pressed" from="buttonholder/createbox" to="." method="_on_createbox_pressed"]
[connection signal="pressed" from="buttonholder/pause" to="." method="_on_pause_pressed"]
